修复lint错误：Stream#toList()兼容性和Task缺少equals实现
- toList()改为collect(Collectors.toList())，兼容API 29+低版本设备
- Task类实现equals()和hashCode()，修复DiffUtil内容比较问题

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>